--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -29,6 +29,13 @@ research=Research
 researchTurretDamage=Turret damage
 researchUnitDamage=Unit damage
 researchGeneratorEfficiency=Generator efficiency
+modeNormal=Normal mode
+modeBuild=Building
+modeDestroy=Destruction
+modeBuildFirstSector=First sector building
+modeBuildSector=Sector building
+modeSelectHangars=Hangar selection
+modeSelectSector=Target sector selection
 
 # General
 ok=OK
