--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -29,6 +29,13 @@ research=Исследования
 researchTurretDamage=Урон турелей
 researchUnitDamage=Урон юнитов
 researchGeneratorEfficiency=Эффективность генераторов
+modeNormal=Нормальный режим
+modeBuild=Строительство
+modeDestroy=Разрушение
+modeBuildFirstSector=Строительство первого сектора
+modeBuildSector=Строительство сектора
+modeSelectHangars=Выбор ангаров
+modeSelectSector=Выбор целевого сектора
 
 # General
 ok=ОК
