Fixed BuildingGUI and created UnitBuildingGUI

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -25,6 +25,11 @@ buildingMine=Mine
 buildingMineDescription=Extracts resources
 buildingHangar=Hangar
 buildingHangarDescription=Used for attacking other players
+unitBuilding=Unit building
+unitStrength=Strength: {0,number}
+unitBuild=Build: {0,number}
+unitBomber=Bomber
+unitBomberDescription=Uses bombs to attack
 research=Research
 researchTurretDamage=Turret damage
 researchUnitDamage=Unit damage
