--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -25,6 +25,11 @@ buildingMine=Шахта
 buildingMineDescription=Добывает ресурсы
 buildingHangar=Ангар
 buildingHangarDescription=Используется для атаки других игроков
+unitBuilding=Строительство юнитов
+unitStrength=Прочность: {0,number}
+unitBuild=Построить: {0,number}
+unitBomber=Бомбардировщик
+unitBomberDescription=Использует бомбы для атаки
 research=Исследования
 researchTurretDamage=Урон турелей
 researchUnitDamage=Урон юнитов
