--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -7,6 +7,23 @@ exit=Exit
 login=Login
 register=Register
 confirmEmail=Confirm email
+pickColor=Pick color
+userName=User name
+password=Password
+email=Email
+repeatPassword=Repeat password
+
+# EmailConfirmationScreen
+codeFromEmail=Code from email
+confirm=Confirm
+resend=Resend
+
+# SettingsScreen
+soundVolume=Sound volume
+musicVolume=Music volume
+ipAddress=IP address
+port=Port
+masterPort=SSL server port
 
 # GameScreen
 building=Building
@@ -46,3 +63,4 @@ modeSelectSector=Target sector selection
 ok=OK
 cancel=Cancel
 close=Close
+save=Save
