--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -7,6 +7,23 @@ exit=Выход
 login=Войти
 register=Зарегистрироваться
 confirmEmail=Подтвердить Email
+pickColor=Подобрать цвет
+userName=Имя пользователя
+password=Пароль
+email=Email
+repeatPassword=Повторите пароль
+
+# EmailConfirmationScreen
+codeFromEmail=Код из Email
+confirm=Подтвердить
+resend=Переотправить
+
+# SettingsScreen
+soundVolume=Громкость звука
+musicVolume=Громкость музыки
+ipAddress=IP-адрес сервера
+port=Порт сервера
+masterPort=Порт SSL-сервера
 
 # GameScreen
 building=Строительство
@@ -46,3 +63,4 @@ modeSelectSector=Выбор целевого сектора
 ok=ОК
 cancel=Отмена
 close=Закрыть
+save=Сохранить
