Added exit dialog

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -58,9 +58,12 @@ modeBuildFirstSector=First sector building
 modeBuildSector=Sector building
 modeSelectHangars=Hangar selection
 modeSelectSector=Target sector selection
+exitQuestion=Do you really want to exit?
 
 # General
 ok=OK
 cancel=Cancel
 close=Close
 save=Save
+yes=Yes
+no=No
