--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -58,9 +58,12 @@ modeBuildFirstSector=Строительство первого сектора
 modeBuildSector=Строительство сектора
 modeSelectHangars=Выбор ангаров
 modeSelectSector=Выбор целевого сектора
+exitQuestion=Вы действительно хотите выйти?
 
 # General
 ok=ОК
 cancel=Отмена
 close=Закрыть
 save=Сохранить
+yes=Да
+no=Нет
