Added messages to action results

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -67,3 +67,34 @@ close=Close
 save=Save
 yes=Yes
 no=No
+
+# Action result
+attackResultNotAttackable=Impossible to attack
+attackResultHangarsAlreadyUsed=Some hangars already used
+authorizationResultPairNotFound=No such user
+buildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
+buildResultCollisionFound=Intersection found
+buildResultBuildingLimitExceeded=Building limit exceeded\nMax: {0,number}
+buildResultNotInTerritory=Not in territory or on sector bound
+buildResultSectorBlocked=Sector is blocked
+destroyResultNotOwningBuilding=Building is not yours
+destroyResultSectorBlocked=Sector is blocked
+emailConfirmationResultWrongCode=Wrong code. Tries left: {0,number}
+emailConfirmationResultDoesNotExist=Player does not exist or\nconfirmed its Email
+registrationResultSuccess=Check your Email
+registrationResultInvalidEmail=Invalid Email format
+registrationResultEmailExists=Player with this Email exists
+registrationResultInvalidNameLength=Length of name must be\nbetween {0,number} and {1,number}
+registrationResultInvalidPasswordLength=Length of password must be\nnot less than {0,number}
+registrationResultInvalidNameSymbols=Invalid symbols in name
+registrationResultNameExists=Player with this name exists
+researchResultNotEnoughResources=Not enough resources\nRequired: {0,number}
+researchResultMaxLevel=Already max level
+resendEmailResultEmailResent=Email resent
+resendEmailResultDoesNotExist=Player does not exist or\nconfirmed its Email
+sectorBuildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
+sectorBuildResultIntersectsWithEnemy=Sector intersects with enemy
+sectorBuildResultWrongPosition=Wrong sector position
+unitBuildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
+unitBuildResultNoPlaceInHangar=No place in hangar
+unitBuildResultSectorBlocked=Sector is blocked
