--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -67,3 +67,34 @@ close=Закрыть
 save=Сохранить
 yes=Да
 no=Нет
+
+# Action result
+attackResultNotAttackable=Невозможно атаковать
+attackResultHangarsAlreadyUsed=Некоторые ангары использованы
+authorizationResultPairNotFound=Нет такого пользователя
+buildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
+buildResultCollisionFound=Найдено пересечение
+buildResultBuildingLimitExceeded=Достигнут лимит\nМаксимальное кол-во: {0,number}
+buildResultNotInTerritory=Не на территории или на границе сектора
+buildResultSectorBlocked=Сектор заблокирован
+destroyResultNotOwningBuilding=Постройка не ваша
+destroyResultSectorBlocked=Сектор заблокирован
+emailConfirmationResultWrongCode=Неверный код. Попыток осталось: {0,number}
+emailConfirmationResultDoesNotExist=Игрока не существует, либо\nон подтвердил свой Email
+registrationResultSuccess=Проверьте свою эл. почту
+registrationResultInvalidEmail=Неправильный формат эл. почты
+registrationResultEmailExists=Игрок с такой эл. почтой существует
+registrationResultInvalidNameLength=Длина имени должна быть\nмежду {0,number} и {1,number}
+registrationResultInvalidPasswordLength=Длина пароля должна быть\nне меньше чем {0,number}
+registrationResultInvalidNameSymbols=Неправильные символы в имени
+registrationResultNameExists=Игрок с таким именем существует
+researchResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
+researchResultMaxLevel=Достигнут максимальный уровень
+resendEmailResultEmailResent=Эл. письмо переотправлено
+resendEmailResultDoesNotExist=Игрока не существует, либо\nон подтвердил свой Email
+sectorBuildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
+sectorBuildResultIntersectsWithEnemy=Сектор пересекается с вражеским
+sectorBuildResultWrongPosition=Неверная позиция сектора
+unitBuildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
+unitBuildResultNoPlaceInHangar=Нет места в ангаре
+unitBuildResultSectorBlocked=Сектор заблокирован
