Added network state display and more messages

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -13,6 +13,11 @@ userName=User name
 password=Password
 email=Email
 repeatPassword=Repeat password
+typeUserName=Type user name
+typePassword=Type password
+typeEmail=Type email
+typeRepeatPassword=Repeat password
+passwordsDoNotMatch=Passwords do not match
 
 # EmailConfirmationScreen
 codeFromEmail=Code from email
@@ -70,6 +75,8 @@ yes=Yes
 no=No
 
 # Action result
+networkProblems=Probable problems with connection
+seriousNetworkProblems=You have problems with connection
 attackResultNotAttackable=Impossible to attack
 attackResultHangarsAlreadyUsed=Some hangars already used
 authorizationResultPairNotFound=No such user
