--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -13,6 +13,11 @@ userName=Имя пользователя
 password=Пароль
 email=Email
 repeatPassword=Повторите пароль
+typeUserName=Введите имя пользователя
+typePassword=Введите пароль
+typeEmail=Введите эл. почту
+typeRepeatPassword=Повторите пароль
+passwordsDoNotMatch=Пароли не совпадают
 
 # EmailConfirmationScreen
 codeFromEmail=Код из Email
@@ -70,6 +75,8 @@ yes=Да
 no=Нет
 
 # Action result
+networkProblems=Возмножные проблемы с подключением
+seriousNetworkProblems=У вас проблемы с подключением
 attackResultNotAttackable=Невозможно атаковать
 attackResultHangarsAlreadyUsed=Некоторые ангары использованы
 authorizationResultPairNotFound=Нет такого пользователя
