Added menu for selecting servers

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -4,6 +4,19 @@ settings=Settings
 help=Help
 exit=Exit
 
+# SelectServerScreen
+serverList=Server list
+officialServers=Official servers
+customServers=Custom servers
+edit=Edit
+create=Create
+serverName=Server name
+serverIp=Server IP
+serverPort=Server port
+typeServerName=Type server name
+typeServerIp=Type server IP
+typeServerPort=Type server port
+
 # LoginScreen
 login=Login
 register=Register
