--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -4,6 +4,19 @@ settings=Настройки
 help=Помощь
 exit=Выход
 
+# SelectServerScreen
+serverList=Список серверов
+officialServers=Официальные сервера
+customServers=Пользовательские сервера
+edit=Изменить
+create=Создать
+serverName=Название сервера
+serverIp=IP-адрес сервера
+serverPort=Порт сервера
+typeServerName=Введите название сервера
+typeServerIp=Введите IP-адрес сервера
+typeServerPort=Введите порт сервера
+
 # LoginScreen
 login=Войти
 register=Зарегистрироваться
