--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -119,3 +119,6 @@ sectorBuildResultWrongPosition=Wrong sector position
 unitBuildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
 unitBuildResultNoPlaceInHangar=No place in hangar
 unitBuildResultSectorBlocked=Sector is blocked
+
+# Tutorial
+tutorialFile=tutorial.json
