--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -119,3 +119,6 @@ sectorBuildResultWrongPosition=Неверная позиция сектора
 unitBuildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
 unitBuildResultNoPlaceInHangar=Нет места в ангаре
 unitBuildResultSectorBlocked=Сектор заблокирован
+
+# Tutorial
+tutorialFile=tutorial_ru.json
