Added tutorial dialog if player has no sectors yet

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -121,4 +121,6 @@ unitBuildResultNoPlaceInHangar=No place in hangar
 unitBuildResultSectorBlocked=Sector is blocked
 
 # Tutorial
+tutorial=Tutorial
+tutorialQuestion=Looks like you just started playing. Would you like to go through the tutorial?
 tutorialFile=tutorial.json
