--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -121,4 +121,6 @@ unitBuildResultNoPlaceInHangar=Нет места в ангаре
 unitBuildResultSectorBlocked=Сектор заблокирован
 
 # Tutorial
+tutorial=Обучение
+tutorialQuestion=Кажется, вы только начали играть. Не хотели бы вы пройти обучение?
 tutorialFile=tutorial_ru.json
