Added rating and rating GUI

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -78,6 +78,7 @@ modeBuildSector=Sector building
 modeSelectHangars=Hangar selection
 modeSelectSector=Target sector selection
 exitQuestion=Do you really want to exit?
+rating=Rating
 
 # General
 ok=OK
