--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -78,6 +78,7 @@ modeBuildSector=Строительство сектора
 modeSelectHangars=Выбор ангаров
 modeSelectSector=Выбор целевого сектора
 exitQuestion=Вы действительно хотите выйти?
+rating=Рейтинг
 
 # General
 ok=ОК
