Fixed some russian localization mistakes

--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -89,7 +89,7 @@ yes=Да
 no=Нет
 
 # Action result
-networkProblems=Возмножные проблемы с подключением
+networkProblems=Возможные проблемы с подключением
 seriousNetworkProblems=У вас проблемы с подключением
 attackResultNotAttackable=Невозможно атаковать
 attackResultHangarsAlreadyUsed=Некоторые ангары использованы
@@ -123,5 +123,5 @@ unitBuildResultSectorBlocked=Сектор заблокирован
 
 # Tutorial
 tutorial=Обучение
-tutorialQuestion=Кажется, вы только начали играть. Не хотели бы вы пройти обучение?
+tutorialQuestion=Кажется, вы только начали играть. Хотели бы вы пройти обучение?
 tutorialFile=tutorial_ru.json
