Added "Map quality" in settings

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -43,6 +43,9 @@ musicVolume=Music volume
 ipAddress=IP address
 port=Port
 masterPort=SSL server port
+mapQuality=Map quality
+mapQualityLow=Low
+mapQualityHigh=High
 
 # GameScreen
 building=Building
