--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -43,6 +43,9 @@ musicVolume=Громкость музыки
 ipAddress=IP-адрес сервера
 port=Порт сервера
 masterPort=Порт SSL-сервера
+mapQuality=Качество карты
+mapQualityLow=Низкое
+mapQualityHigh=Высокое
 
 # GameScreen
 building=Строительство
