Added geolocation check

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -97,6 +97,7 @@ networkProblems=Probable problems with connection
 seriousNetworkProblems=You have problems with connection
 attackResultNotAttackable=Impossible to attack
 attackResultHangarsAlreadyUsed=Some hangars already used
+attackResultWrongGeolocation=You must be on target\nsector territory
 authorizationResultPairNotFound=No such user
 buildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
 buildResultCollisionFound=Intersection found
@@ -121,6 +122,7 @@ resendEmailResultDoesNotExist=Player does not exist or\nconfirmed its Email
 sectorBuildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
 sectorBuildResultIntersectsWithEnemy=Sector intersects with enemy
 sectorBuildResultWrongPosition=Wrong sector position
+sectorBuildResultWrongGeolocation=You must be on new\nsector territory
 unitBuildResultNotEnoughResources=Not enough resources\nRequired: {0,number}
 unitBuildResultNoPlaceInHangar=No place in hangar
 unitBuildResultSectorBlocked=Sector is blocked
