--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -97,6 +97,7 @@ networkProblems=Возможные проблемы с подключением
 seriousNetworkProblems=У вас проблемы с подключением
 attackResultNotAttackable=Невозможно атаковать
 attackResultHangarsAlreadyUsed=Некоторые ангары использованы
+attackResultWrongGeolocation=Вы должны быть на\nтерритории сектора
 authorizationResultPairNotFound=Нет такого пользователя
 buildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
 buildResultCollisionFound=Найдено пересечение
@@ -121,6 +122,7 @@ resendEmailResultDoesNotExist=Игрока не существует, либо\n
 sectorBuildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
 sectorBuildResultIntersectsWithEnemy=Сектор пересекается с вражеским
 sectorBuildResultWrongPosition=Неверная позиция сектора
+sectorBuildResultWrongGeolocation=Вы должны быть на\nтерритории сектора
 unitBuildResultNotEnoughResources=Нехватка ресурсов\nТребуется: {0,number}
 unitBuildResultNoPlaceInHangar=Нет места в ангаре
 unitBuildResultSectorBlocked=Сектор заблокирован
