Added basic versioning

--- a/android/assets/i18n/Bundle.properties
+++ b/android/assets/i18n/Bundle.properties
@@ -131,3 +131,6 @@ unitBuildResultSectorBlocked=Sector is blocked
 tutorial=Tutorial
 tutorialQuestion=Looks like you just started playing. Would you like to go through the tutorial?
 tutorialFile=tutorial.json
+
+# Invalid version
+invalidVersion=Required version of game:\n{0} - {1}
