--- a/android/assets/i18n/Bundle_ru.properties
+++ b/android/assets/i18n/Bundle_ru.properties
@@ -131,3 +131,6 @@ unitBuildResultSectorBlocked=Сектор заблокирован
 tutorial=Обучение
 tutorialQuestion=Кажется, вы только начали играть. Хотели бы вы пройти обучение?
 tutorialFile=tutorial_ru.json
+
+# Invalid version
+invalidVersion=Требуемая версия игры:\n{0} - {1}
